--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ markdown: rdiscount
 exclude: ['.git']
 name: "sukru bezen's blog"
 description: "sukru bezen's blog"
-url: http://skr.github.io/personal_site
+url: http://skr.github.io
