--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-pygments: true
 permalink: /blog/:year/:month/:day/:title
-markdown: rdiscount
+highlighter: rouge
 exclude: ['.git']
 name: "sukru bezen's blog"
 description: "sukru bezen's blog"
