--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ highlighter: rouge
 exclude: ['.git']
 name: "sukru bezen's blog"
 description: "sukru bezen's blog"
-url: http://skr.github.io
+url: http://sukrubezen.github.io
